라일리 추가

--- a/index.htm
+++ b/index.htm
@@ -40,6 +40,15 @@
   <a href="cst1.html">
     <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
     <img src="image/360/thumbnail/cst1.jpg" alt="cst1">
+  </div>
+</a>
+</div>
+<div class="thumb">
+  <div class="container">
+  <a href="portal R.html">
+    <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
+    <img src="image/360/thumbnail/prr.png" alt="portal r">
+  </a>
 </div>
 </div>
   </article>
