maps에 라일리 추가

--- a/maps.html
+++ b/maps.html
@@ -33,13 +33,21 @@
   <article>
     
           <h1>싱글플레이어 맵</h1>
+		              <div class="thumb thumb-desc">
+      <div class="container">
+      <a href="portal R.html">
+        <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
+        <img src="image/360/thumbnail/prr.png" alt="prr">
+      </a><div class="desc"><h2><a href="portal R.html">포탈 : 라일리 (1.19)</a></h2>라일리와 모험을 해보세요! <br> (업데이트 안함)</div>
+      </div>
+    </div>
               <h1>멀티플레이어 맵</h1>
             <div class="thumb thumb-desc">
       <div class="container">
       <a href="cst1.html">
         <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
         <img src="image/360/thumbnail/cst1.jpg" alt="CST1">
-      </a><div class="desc"><h2><a href="shulker-rush-2.html">커스텀 PVP 1 (1.19)</a></h2>친구들과 함께 많은 직업들로 PVP를 해보세요! <br> (서비스 종료, 커스텀 PVP 2 만드는중)</div>
+      </a><div class="desc"><h2><a href="cst1.html">커스텀 PVP 1 (1.19)</a></h2>친구들과 함께 많은 직업들로 PVP를 해보세요! <br> (서비스 종료, 커스텀 PVP 2 만드는중)</div>
       </div>
     </div>
               <h1>베드락 맵</h1>
