--- a/portal R.html
+++ b/portal R.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>포탈 : 라일리 - 커스텀 PVP 1</title>
+		<title>Tanso Studio - 포탈 : 라일리</title>
 		<link rel="icon" type="image/png" href="favicon.png">
 		<!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" /><![endif]-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
