--- a/index.htm
+++ b/index.htm
@@ -51,6 +51,14 @@
   </a>
 </div>
 </div>
+<div class="thumb">
+	<div class="container">
+	<a href="etw.html">
+	  <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
+	  <img src="image/360/thumbnail/etw.png" alt="portal r">
+	</a>
+  </div>
+  </div>
   </article>
 </section>
   </div>
