--- a/team.html
+++ b/team.html
@@ -32,15 +32,15 @@
 
 <div class="member-list">
 <div class="thumb-member" data-aos="zoom-in-right">
-  <img src="https://w.namu.la/s/1001a61feb4a6621e72691d425bae3223e7d3ddf018622ebdb5135ca6aaa54cccf4b14d893566df7c1d84a5bb0b7fd47d1312323f7fd486d419f03f404d224e8ee30b73879f0a03da71ec3ea1623e0067b48d62ff9199920487dc4391231cb11">
+  <img src="https://cdn.discordapp.com/avatars/683642819147333642/14c53c59df1ff0a86e84c69967e07790.webp?size=1280">
   <div class="member"><h2>영과</h2><div class="bio">asdf</div></div>
 </div>
 <div class="thumb-member" data-aos="zoom-in-left">
-  <img src="https://w.namu.la/s/0c265c4fdea5a6ca52cd201952c9027f16e12521b5f0ed031e4f328f05ed1eaf3413934fbd9e81aee75cda7ca0e74505fa2dc841d40f3dcaf28991ad06bce25f65e04c794acbd8f5c920fd2fcc228cb39da435d3f5171de7613d7eec0b30d5b1">
+  <img src="https://cdn.discordapp.com/avatars/834253879990157312/37b5f3068e9f300afebc136642e3662b.webp?size=1280">
   <div class="member"><h2>진윤</h2><div class="bio">와 샌즈</div></div>
 </div>
 <div class="thumb-member" data-aos="zoom-in-right">
-  <img src="https://w.namu.la/s/780ca54da77c1a371a4e4e22fb44ae2d6edecf01d3c883b5f6b872b6f6fd2e91ffb51ce9c0b2fa74f96332f7101b2ba9bfe32197f063f62e4d457d24ee127e7bae8a8246e0804ea4787fbcab58472cf741e37b2bb7cb61c720ab7d327e20e0464d733b16695e53cacb1cc6e72a7b894c">
+  <img src="https://cdn.discordapp.com/avatars/623116047532163072/a366f1f08261b6afa579a71a1e1a1ab6.webp?size=1280">
   <div class="member"><h2>세토</h2><div class="bio">영과 빡빡이</div></div>
 </div>
 
