--- a/etw.html
+++ b/etw.html
@@ -2,9 +2,13 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Tanso Studio - maps</title>
+		<title>Tanso Studio - 엔티티워즈</title>
 		<link rel="icon" type="image/png" href="favicon.png">
-
+		<!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" /><![endif]-->
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta name="description" content="">
+		<meta name="Expires" content="86400">
+		<meta name="Cache-Control" content="public,max-age=86400">
 		<style>#logo img,header,nav{width:100% }#wrapper,footer{max-width:1200px;margin:auto;padding-top:15px;}.download,.thumb-desc .desc a,a,nav a{text-decoration:none }*{box-sizing:border-box;font-family:Lato,sans-serif }body{margin:0;background:url(background.jpg) center no-repeat fixed #717580;-webkit-background-size:cover;-moz-background-size:cover;-o-background-size:cover;background-size:cover }a{color:#000 }header{max-width:1200px;margin:130px auto auto }header h1,header h2{font-family:'Josefin Sans';color:#eee;text-align:center;text-shadow:4px 1px 7px rgba(35,35,35,.9) }header h1{font-size:3em;margin:10px }header h2{font-size:2em;margin:10px 0 30px }header hr{width:200px;background-color:#fff;height:4px;margin-bottom:20px;box-shadow:2px 2px 10px rgb(0,0,0,.4);border:none }nav{background:#0b0d12;position:fixed;top:0;text-align:center;z-index:10;box-shadow:0 -3px 15px 5px #222 }nav a{display:inline-block;color:#eee;font-size:1.2em;padding:10px 20px;transition:all .3s;-webkit-transition:all .3s;-moz-transition:all .3s;-o-transition:all .3s }#logo img{position:absolute;transition:transform .5s;-webkit-transition:transform .5s;-o-transition:transform .5s;-moz-transition:transform .5s }#logo,.thumb{position:relative }#logo{width:70px;-ms-transform:rotate(45deg);-moz-transform:rotate(45deg);-o-transform:rotate(45deg);-webkit-transform:rotate(45deg);transform:rotate(45deg);top:-55px }#logo:hover img{-ms-transform:rotate(180deg);-moz-transform:rotate(180deg);-o-transform:rotate(180deg);-webkit-transform:rotate(180deg);transform:rotate(180deg) }#nav-left{text-align:right;padding-left:0 }#nav-right{text-align:left;padding-right:0 }.download,.download-title,.members h1,.thumb .icon,article h1{text-align:center }#nav-left:hover,#nav-right:hover{color:#fff }#nav-left:hover{-ms-transform:translate(-10px,0);-moz-transform:translate(-10px,0);-o-transform:translate(-10px,0);-webkit-transform:translate(-10px,0);transform:translate(-10px,0) }#nav-right:hover{-ms-transform:translate(10px,0);-moz-transform:translate(10px,0);-o-transform:translate(10px,0);-webkit-transform:translate(10px,0);transform:translate(10px,0) }.nav-small a{padding:5px 15px 6px }.nav-small #logo{width:65px;top:-60px }#wrapper{width:100%;background-color:rgba(238,238,238,.8);overflow:hidden }.section-side{display:none }.section-main{margin:5px 10px 10px }.section-main article{overflow:hidden;padding:0 5px }aside{margin-bottom:20px }article h1{margin-top:0;box-shadow:3px 3px 5px #999;border-radius:3px;padding:12px;font-size:1.15em;background-color:#222;margin-bottom:25px;border-bottom:3px solid #de9000;color:#eee;clear:both }.thumb{width:100%;padding:0 6px 10px;float:left }.thumb img{width:100%;border:1px solid #777;display:block;height:50vw;transition:transform .3s;-webkit-transition:transform .3s;-moz-transition:transform .3s;-o-transition:transform .3s }.thumb .container>a{position:relative;display:inline-block;width:100%;height:100%;overflow:hidden;box-shadow:0 0 8px -2px #000 }.thumb .overlay{z-index:1;position:absolute;top:0;left:0;width:100%;height:100%;background:rgb(0,0,0,.4);background:radial-gradient(rgb(0,0,0,.3),rgb(0,0,0,.5));opacity:0;transition:all .5s;-webkit-transition:all .5s;-moz-transition:all .5s;-o-transition:all .5s }.thumb .icon{box-shadow:1px 1px 10px -1px #000;transition:all .5s;-webkit-transition:all .5s;-o-transition:all .5s;-moz-transition:all .5s;padding:15px;border:3px solid #ccc;border-radius:100px;color:#ddd;font-size:60px;position:absolute;top:50%;left:50%;-webkit-transform:translate(-50%,-50%);-o-transform:translate(-50%,-50%);-moz-transform:translate(-50%,-50%);-ms-transform:translate(-50%,-50%);transform:translate(-50%,-50%) }.box,.members{box-shadow:1px 1px 10px -3px #777 }.thumb .icon i{-webkit-transform:scaleY(1.4);-moz-transform:scaleY(1.4);-ms-transform:scaleY(1.4);-o-transform:scaleY(1.4);transform:scaleY(1.4);}.thumb .container{position:relative }.thumb-desc,.thumb-desc .container>a{width:100% }.thumb-desc .desc{display:none;vertical-align:top;padding-left:15px;padding-top:2px;position:absolute;height:25vw;overflow:hidden;column-width:800px }.thumb-desc .desc h2{margin:0 0 10px;padding:0;font-size:1.2em;font-weight:700 }.thumb-desc .desc a{color:#111 }.thumb .overlay:hover+img{-webkit-transform:scale(1.1);-moz-transform:scale(1.1);-ms-transform:scale(1.1);-o-transform:scale(1.1);transform:scale(1.1) }.thumb .overlay:hover{opacity:1 }.thumb .overlay:hover .icon{font-size:30px }.box,.text,.video{margin:0 8px 30px }.image{margin:0 8px 15px }.box{background-color:#f7f7f7;padding:15px 20px }article li{list-style-type:square;margin-bottom:10px }article ul{padding-left:25px }.image img,.small-image img{width:100% }.small-image{width:100%;padding:0 8px 15px;float:left;position:relative }.youtube-player{position:relative;padding-bottom:55.5%;height:0;overflow:hidden;max-width:100%;background:#000;margin:5px }.youtube-player>div{animation:fadein .8s;-moz-animation:fadein .8s;-webkit-animation:fadein .8s;-o-animation:fadein .8s }.youtube-player iframe{position:absolute;top:0;left:0;width:100%;height:100%;background:0 0 }.youtube-player img{bottom:0;display:block;left:0;margin:auto;max-width:100%;width:100%;position:absolute;right:0;top:0;border:none;height:134%;cursor:pointer;-webkit-transition:.4s all;-moz-transition:.4s all;-o-transition:.4s all;transition:.4s all }.youtube-player .play:hover+img,.youtube-player img:hover{-webkit-filter:brightness(80%) }.youtube-player .play:hover{-webkit-transform:scale(1.1);-moz-transform:scale(1.1);-ms-transform:scale(1.1);-o-transform:scale(1.1);transform:scale(1.1) }.youtube-player .play{height:72px;width:72px;left:50%;top:50%;margin-left:-36px;margin-top:-36px;position:absolute;z-index:1;background:url(play.png) no-repeat;cursor:pointer;transition:transform .3s;-webkit-transition:transform .3s;-moz-transition:transform .3s;-o-transition:transform .3s }.download-group{display:table;table-layout:fixed;width:100%;margin-bottom:30px }.download-row{display:table-row }.download-cell{padding:0 15px }.download{max-width:300px;margin:auto;background-color:#317beb;border:none;color:#fff;padding:12px 0;cursor:pointer;font-size:20px;transition:background .4s,transform .2s;-webkit-transition:background .4s,transform .2s;-o-transition:background .4s,transform .2s;-moz-transition:background .4s,transform .2s;display:block }.download-box{max-width:700px;margin:auto;margin-bottom:10px;padding:13px;background:#fafafa;border:1px dashed #888 }.download-title{margin-bottom:6px;color:#000;text-shadow:1px 1px 1px rgba(35,35,35,.4) }.download:hover{background-color:#3872ca;-webkit-transform:scale(1.05);-moz-transform:scale(1.05);-ms-transform:scale(1.05);-o-transform:scale(1.05);transform:scale(1.05) }.download:active{-webkit-transform:none;-moz-transform:none;-ms-transform:none;-o-transform:none;transform:none }.download i{margin-right:5px }.latest-maps .thumb{width:100% }@media  screen and (min-width:450px){.latest-maps .thumb{width:50% }}@media  screen and (min-width:750px){.latest-maps .thumb{width:33.33% }.latest-maps .thumb img{height:17.5vw }}@media  screen and (min-width:1050px){.latest-maps{padding:0 10px }}.members{margin:0 5px;background:#f7f7f7;overflow:hidden }.thumb-member{width:100%;float:left;padding:12px }.thumb-member .member,.thumb-member img{width:100%;float:left;height:100%;border:1px solid #bbb }.thumb-member .member{background-color:#f1ece0;height:100%;margin-top:5px }.thumb-member .member h2{background:#000;padding:9px;margin:0;font-size:1.3em;text-align:center;color:#eee }.thumb-member .member .bio{padding:10px 12px;font-size:.82em }.member-list{padding:10px;overflow:hidden }.members h1{background-color:#368b9c;font-size:1.25em;border:none;margin:0;box-shadow:none }@media  screen and (min-width:450px){.member-list{padding:15px 30px }}@media  screen and (min-width:600px){.download-cell{display:table-cell}.thumb-member .member,.thumb-member img{width:50% }.thumb-member{height:280px }.thumb-member .member{border-left:none;margin-top:0 }.thumb-member img{border-right:none }}@media  screen and (min-width:950px){.thumb-member{width:50%;padding:8px }.member-list{padding:15px }}@media  screen and (min-width:1200px){.thumb-member .member .bio{font-size:.886em;padding:12px 15px }.thumb-member{padding:12px }}@media  screen and (min-width:450px){.small-image img,.thumb img{height:25vw }.thumb{width:50% }.thumb-desc{width:100% }.thumb-desc .container>a{width:calc(50% - 6px) }.thumb-desc .desc{display:inline-block }.small-image{width:calc(50% - 5px);padding:0 5px 15px 15px }.box,.text,.video{margin:0 15px 30px }.image{margin:0 15px 20px }}@media  screen and (min-width:500px){nav a{font-size:1.4em;padding:14px 38px }#logo{width:110px;top:-75px }.nav-small a{padding:6px 32px 7px }.nav-small #logo{width:78px;top:-70px }#nav-left,#nav-right{width:calc(50% - 90px) }.section-main{margin:20px }}@media  screen and (min-width:750px){.thumb{padding:0 12px 20px }.thumb-desc .desc{padding-top:8px }.thumb-desc .container>a{width:calc(50% - 12px) }}@media  screen and (min-width:1050px){.section-main,.section-side{margin:10px 25px 25px }.section-side{width:310px;float:right;display:block }.small-image img,.thumb img,.thumb-desc .desc{height:17.5vw;max-height:210px }}@keyframes  fadein{from{opacity:0 }to{opacity:1 }}@-moz-keyframes fadein{from{opacity:0 }to{opacity:1 }}@-webkit-keyframes fadein{from{opacity:0 }to{opacity:1 }}@-o-keyframes fadein{from{opacity:0 }to{opacity:1 }}.footer-titre{font-size:1.2em}footer a{text-decoration:none;color:#eee}footer{background-color:#222;height:255px;padding:5px 25px}footer>aside{font-size:.9em;margin-bottom:0;color:#eee}.bottom-section{text-align:center;font-size:.8em;margin:15px 0}#social-wrapper{display:block;width:267px;margin:15px auto auto}#social{float:left;margin-right:-10px}.icon-link{margin-top:5px}.icon-link i{background-color:#333;padding:7px;border:1px solid #444;color:#eee}.icon-link,.icon-link i:hover{background-color:#444}.icon-link,.icon-link i{width:53px;text-align:center;font-size:1.5em;display:inline-block}@media  screen and (min-width:800px){footer aside{float:left;width:33.333%}footer{height:110px}}</style>
 		<link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Lato" rel="stylesheet">
 		<script async="" src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
@@ -27,37 +31,33 @@
 </section>
     <section class="section-main">
   <article>
-    
-          <h1>싱글플레이어 맵</h1>
-		              <div class="thumb thumb-desc">
-      <div class="container">
-      <a href="portal R.html">
-        <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
-        <img src="image/360/thumbnail/prr.png" alt="prr">
-      </a><div class="desc"><h2><a href="portal R.html">포탈 : 라일리 (1.19)</a></h2>라일리와 모험을 해보세요! <br> (업데이트 안함)</div>
-      </div>
-    </div>
-              <h1>멀티플레이어 맵</h1>
-            <div class="thumb thumb-desc">
-      <div class="container">
-      <a href="cst1.html">
-        <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
-        <img src="image/360/thumbnail/cst1.jpg" alt="CST1">
-      </a><div class="desc"><h2><a href="cst1.html">커스텀 PVP 1 (1.19)</a></h2>친구들과 함께 많은 직업들로 PVP를 해보세요! <br> (서비스 종료, 커스텀 PVP 2 만드는중)</div>
-      </div>
-    </div>
-	<div class="thumb thumb-desc">
-		<div class="container">
-		<a href="etw.html">
-		  <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
-		  <img src="image/360/thumbnail/etw.png" alt="etw1">
-		</a><div class="desc"><h2><a href="etw.html">엔티티워즈 1 (1.19.4)</a></h2>다양한 엔티티로 카드게임을 즐겨보세요! <br> (개발 종료, 엔티티워 리메이크중)</div>
-		</div>
-	  </div>
-              <h1>베드락 맵</h1>
-            </article>
+    <h1>엔티티워즈 1</h1>
+
+<div class="video"><div class="youtube-player" data-id="AUo9HFARaqQ"></div></div>
+
+<div class="text"><em>엔티티워즈 1은 <del>오류 가득에 개판</del> 카드게임입니다! <br> (엔티티워즈 2보다 밸런스도 안좋고 최적화도 안되어있지만 일단 하십시오)</em></div>
+
+<div class="download-group"><div class="download-row"><div class="download-cell"><div class="download-box"><div class="download-title">1.19.4</div><a class="download" href="map/엔티티워 1 (미완,업데이트 중지).zip"><i class="fa fa-download"></i> 다운로드</a></div></div></div></div>
+
+<div class="box"><p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;text-align:center;line-height:107%;font-size:13px;font-family:"맑은 고딕";'><strong><span style="font-size:35px;line-height:107%;color:#00B0F0;">EntityWars</span></strong></p>
+<p style='margin-top:0cm;margin-right:0cm;margin-bottom:8.0pt;margin-left:0cm;text-align:center;line-height:107%;font-size:13px;font-family:"맑은 고딕";'><strong><span style="font-size:35px;line-height:107%;color:black;">게임 룰</span></strong></p>
+<ol style="list-style-type: decimal;margin-left:48px;">
+    <li><strong><span style="line-height:;font-size:16.0pt;line-height:;color:#4472C4;">자신 쪽의 저울이 땅에 닿으면 패배합니다!</span></strong></li>
+    <li><strong><span style="line-height:;font-size:16.0pt;line-height:;color:#4472C4;">후공은 비활성칸이 있는데,&nbsp;비활성칸에 배치된 엔티티는 활성칸에 영향을 끼치지 못합니다!</span></strong></li>
+    <li><strong><span style="line-height:;font-size:16.0pt;line-height:;color:#4472C4;">비활성칸의 엔티티는 앞의 활성칸에 있는 엔티티가 죽었을 때 다음 자신의 공격턴에 앞의 활성칸으로 나가게 됩니다!</span></strong></li>
+    <li><strong><span style="line-height:;font-size:16.0pt;line-height:;color:#4472C4;">공격턴에, 어떤 엔티티도 공격자의 줄에 없다면 상대편의 저울을 엔티티의 공격력만큼 내릴 수 있습니다!</span></strong></li>
+</ol><br>
+</div>
+
+<h1>스크린샷</h1>
+
+<div class="image"><img src="screenshot/etw/1.png" alt="1"></div>
+<div class="small-image"><img src="screenshot/etw/2.gif" alt="2"></div>
+<div class="small-image"><img src="screenshot/etw/3.gif" alt="3"></div>
+      </article>
 </section>
-  </div>
+  </div>  
+
 		<script>
 			//Onload Listener
 			window.addEventListener("load",function(){
@@ -65,8 +65,8 @@
 			});
 
 			//Create video thumbnail
-			function labnolThumb(e){return'<div class="play"></div>'+'<img src="https://i.ytimg.com/vi/ID/hqdefault.jpg">'.replace("ID",e)}
-			function labnolIframe(){var e=document.createElement("iframe");e.setAttribute("src","https://www.youtube.com/embed/ID?autoplay=1&rel=0".replace("ID",this.dataset.id)),e.setAttribute("frameborder","0"),e.setAttribute("allowfullscreen","1"),this.parentNode.replaceChild(e,this)}
+			function labnolThumb(e){return'<div class="play"></div>'+'<img src="image/360/thumbnail/etw.png">'.replace("ID",e)}
+			function labnolIframe(){var e=document.createElement("iframe");e.setAttribute("src","https://www.youtube.com/embed/K4bJ2LrhOKU?start=18".replace("ID",this.dataset.id)),e.setAttribute("frameborder","0"),e.setAttribute("allowfullscreen","1"),this.parentNode.replaceChild(e,this)}
 			document.addEventListener("DOMContentLoaded",function(){var e,t,a=document.getElementsByClassName("youtube-player");for(t=0;t<a.length;t++)(e=document.createElement("div")).setAttribute("data-id",a[t].dataset.id),e.innerHTML=labnolThumb(a[t].dataset.id),e.onclick=labnolIframe,a[t].appendChild(e)});
 
 			//Dynamic nav scrolling
