--- a/team.html
+++ b/team.html
@@ -40,7 +40,7 @@
   <div class="member"><h2>진윤</h2><div class="bio">와 샌즈</div></div>
 </div>
 <div class="thumb-member" data-aos="zoom-in-right">
-  <img src="https://cdn.discordapp.com/avatars/623116047532163072/a366f1f08261b6afa579a71a1e1a1ab6.webp?size=1280">
+  <img src="https://cdn.discordapp.com/guilds/1050752711202709574/users/623116047532163072/avatars/56603bd42d1a0e3fdba34994df9b8ee4.png?size=1024">
   <div class="member"><h2>세토</h2><div class="bio">영과 빡빡이</div></div>
 </div>
 
