--- a/team.html
+++ b/team.html
@@ -36,7 +36,7 @@
   <div class="member"><h2>영과</h2><div class="bio">asdf</div></div>
 </div>
 <div class="thumb-member" data-aos="zoom-in-left">
-  <img src="https://cdn.discordapp.com/avatars/834253879990157312/37b5f3068e9f300afebc136642e3662b.webp?size=1280">
+  <img src="https://cdn.discordapp.com/avatars/834253879990157312/425cc69dd1e3b29a3be24ae8994da866.png?size=1024">
   <div class="member"><h2>진윤</h2><div class="bio">와 샌즈</div></div>
 </div>
 <div class="thumb-member" data-aos="zoom-in-right">
