--- a/maps.html
+++ b/maps.html
@@ -34,24 +34,32 @@
       <a href="portal R.html">
         <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
         <img src="image/360/thumbnail/prr.png" alt="prr">
-      </a><div class="desc"><h2><a href="portal R.html">포탈 : 라일리 (1.19)</a></h2>라일리와 모험을 해보세요! <br> (업데이트 안함)</div>
+      </a><div class="desc"><h2><a href="portal R.html">포탈 : 라일리 (1.19 ↑)</a></h2>라일리와 모험을 해보세요! <br> (업데이트 안함)</div>
       </div>
     </div>
               <h1>멀티플레이어 맵</h1>
             <div class="thumb thumb-desc">
       <div class="container">
-      <a href="cst1.html">
+      <a href="dng.html">
         <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
-        <img src="image/360/thumbnail/cst1.jpg" alt="CST1">
-      </a><div class="desc"><h2><a href="cst1.html">커스텀 PVP 1 (1.19)</a></h2>친구들과 함께 많은 직업들로 PVP를 해보세요! <br> (서비스 종료, 커스텀 PVP 2 만드는중)</div>
+        <img src="image/360/thumbnail/dng.png" alt="동물농장">
+      </a><div class="desc"><h2><a href="dng.html">동물농장 (1.20 ↑)</a></h2>친구들과 함께 많은 동물로 위장하고, <br> 농부가 되어 동물로 위장한 사람을 찾으세요</div>
       </div>
     </div>
+	<div class="thumb thumb-desc">
+		<div class="container">
+		<a href="cst1.html">
+		  <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
+		  <img src="image/360/thumbnail/cst1.jpg" alt="CST1">
+		</a><div class="desc"><h2><a href="cst1.html">커스텀 PVP 1 (1.19 ↑)</a></h2>친구들과 함께 많은 직업들로 PVP를 해보세요! <br> (서비스 종료, 커스텀 PVP 2 만드는중)</div>
+		</div>
+	  </div>
 	<div class="thumb thumb-desc">
 		<div class="container">
 		<a href="etw.html">
 		  <div class="overlay"><div class="icon"><i class="far fa-newspaper"></i></div></div>
 		  <img src="image/360/thumbnail/etw.png" alt="etw1">
-		</a><div class="desc"><h2><a href="etw.html">엔티티워즈 1 (1.19.4)</a></h2>다양한 엔티티로 카드게임을 즐겨보세요! <br> (개발 종료, 엔티티워 리메이크중)</div>
+		</a><div class="desc"><h2><a href="etw.html">엔티티워즈 1 (1.19.4 ↑)</a></h2>다양한 엔티티로 카드게임을 즐겨보세요! <br> (개발 종료, 엔티티워 리메이크중)</div>
 		</div>
 	  </div>
               <h1>베드락 맵</h1>
