--- a/dng.html
+++ b/dng.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>Tanso Studio - 엔티티워즈</title>
+		<title>Tanso Studio - 동물농장</title>
 		<link rel="icon" type="image/png" href="favicon.png">
 		<!--[if IE]><link rel="shortcut icon" type="image/x-icon" href="/favicon.ico" /><![endif]-->
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
